--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "timestamp-microservice",
-  "version":"1.0.0",
+  "version": "1.0.0",
   "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.14.0",
     "momentjs": "^2.0.0"
   },
-  "main": "timeserver.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "./node_modules/mocha/bin/mocha tests"
+    "test": "./node_modules/mocha/bin/mocha --exit tests"
   },
   "engines": {
     "node": "4.4.5"
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "jasmine-node": "^1.14.5",
     "mocha": "^5.0.4"
   }
