--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.14.0",
-    "momentjs": "^2.0.0"
+    "moment": "^2.0.0"
   },
   "main": "server.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "test": "./node_modules/mocha/bin/mocha --exit tests"
   },
   "engines": {
-    "node": "4.4.5"
+    "node": ">=4.4.5"
   },
   "repository": {
     "type": "git",
